--- a/rat.html
+++ b/rat.html
@@ -12,7 +12,7 @@
 
     body {
       font-family: 'Inter', sans-serif;
-      background: #f8f9fa; /* koyu arka plan */
+      background: #000000; /* koyu arka plan */
       min-height: 100vh;
       display: flex;
       flex-direction: column;
