--- a/iletisim.html
+++ b/iletisim.html
@@ -167,7 +167,7 @@
       <a href="https://www.instagram.com/teyfiktemiz1/?__pwa=1" class="instagram" target="_blank" aria-label="Instagram">
         <i class="fab fa-instagram"></i>
       </a>
-      <a href="https://discord.gg/f9pUGhms" class="discord" target="_blank" aria-label="Discord">
+      <a href="https://discord.gg/Ez8wtpBgnh" class="discord" target="_blank" aria-label="Discord">
         <i class="fab fa-discord"></i>
       </a>
       <a href="https://github.com/teyfik123" class="github" target="_blank" aria-label="GitHub">
